--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,26 @@ jobs:
           export CC=gcc
           go build -o sshthing.exe ./cmd/sshthing
 
+      - name: Install Inno Setup
+        shell: pwsh
+        run: |
+          choco install innosetup -y --no-progress
+
+      - name: Build installer
+        shell: pwsh
+        env:
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+        run: |
+          $v = $env:GITHUB_REF_NAME
+          if ($v.StartsWith('v')) { $v = $v.Substring(1) }
+          $candidates = @(
+            "$env:ProgramFiles(x86)\Inno Setup 6\ISCC.exe",
+            "$env:ProgramFiles\Inno Setup 6\ISCC.exe"
+          )
+          $iscc = $candidates | Where-Object { Test-Path $_ } | Select-Object -First 1
+          if (-not $iscc) { throw "ISCC.exe not found after install" }
+          & $iscc "installer\sshthing.iss" "/DMyAppVersion=$v" "/DMyAppVersionInfoVersion=$v.0"
+
       - name: Create archive
         shell: pwsh
         run: |
@@ -48,7 +68,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sshthing-windows-amd64
-          path: sshthing-windows-amd64.zip
+          path: |
+            sshthing-windows-amd64.zip
+            sshthing-setup-windows-amd64.exe
 
   build-macos:
     runs-on: macos-latest
@@ -122,11 +144,19 @@ jobs:
         with:
           path: artifacts
 
+      - name: Delete existing release (if any)
+        shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh release delete "${{ github.ref_name }}" --repo "${{ github.repository }}" -y || true
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             artifacts/sshthing-windows-amd64/sshthing-windows-amd64.zip
+            artifacts/sshthing-windows-amd64/sshthing-setup-windows-amd64.exe
             artifacts/sshthing-macos-amd64/sshthing-macos-amd64.zip
             artifacts/sshthing-macos-arm64/sshthing-macos-arm64.zip
           generate_release_notes: true
