--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,15 +57,19 @@ jobs:
         env:
           GITHUB_REF_NAME: ${{ github.ref_name }}
         run: |
-          $v = $env:GITHUB_REF_NAME
-          if ($v.StartsWith('v')) { $v = $v.Substring(1) }
+          $versionLabel = $env:GITHUB_REF_NAME
+          if ($versionLabel.StartsWith('v')) { $versionLabel = $versionLabel.Substring(1) }
+          $coreMatch = [regex]::Match($versionLabel, '^\d+\.\d+\.\d+')
+          if (-not $coreMatch.Success) { throw "Tag does not contain semantic core version: $versionLabel" }
+          $versionCore = $coreMatch.Value
+          $versionInfo = "$versionCore.0"
           $candidates = @(
             "${env:ProgramFiles(x86)}\Inno Setup 6\ISCC.exe",
             "$env:ProgramFiles\Inno Setup 6\ISCC.exe"
           )
           $iscc = $candidates | Where-Object { Test-Path $_ } | Select-Object -First 1
           if (-not $iscc) { throw "ISCC.exe not found after install" }
-          & $iscc "installer\sshthing.iss" "/DMyAppVersion=$v" "/DMyAppVersionInfoVersion=$v.0"
+          & $iscc "installer\sshthing.iss" "/DMyAppVersion=$versionLabel" "/DMyAppVersionInfoVersion=$versionInfo"
 
       - name: Smoke test installer install/uninstall
         shell: pwsh
@@ -108,7 +112,7 @@ jobs:
             sshthing-setup-windows-amd64.exe
 
   build-macos:
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
       - name: Checkout
         uses: actions/checkout@v4
