--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           export PATH="/mingw64/bin:$PATH"
           export CGO_ENABLED=1
           export CC=gcc
-          go build -trimpath -buildvcs=false -o sshthing.exe ./cmd/sshthing
+          go build -trimpath -buildvcs=false -ldflags="-s -w -X main.version=${{ github.ref_name }}" -o sshthing.exe ./cmd/sshthing
 
       - name: Smoke test binary
         shell: msys2 {0}
